# FaceRecognizer

./: CMakeLists.txt  Doxyfile.in  README.md  mk-eclipse-build-project.sh
application/: CMakeLists.txt  FisherFaceTrainer.cpp  FisherFaceTrainer.h  ISystemTrainer.h  ImageProcessor.cpp  ImageProcessor.h  README.md  RecognizerApp.cpp  RecognizerApp.h  VideoProcessor.cpp  VideoProcessor.h
cmake/: c++11.cmake  doxygen.cmake
data/: image_store.txt
